--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 		<center> <h1> Conversor de Moedas </h1></center>
 	    <form action="resultado.html" method="get" >
 			<label for="moeda_origem">Moeda de origem:</label>
-			<input type="text" id="name" name="moeda_origem" required maxlength="3">
+			<input type="text" id="name" name="moeda_origem" required maxlength="3" value="EUR">
 			<br/>
 			<label for="moeda_destino">Moeda de destino:</label>
-			<input type="text" id="name" name="moeda_destino" required maxlength="3">
+			<input type="text" id="name" name="moeda_destino" required maxlength="3" value="BRL">
 			<p>
 			<input type="submit" value="Converter">	
 			</p>
